--- a/src/pages/home/Form.module.scss
+++ b/src/pages/home/Form.module.scss
@@ -12,6 +12,7 @@
   display: grid;
   gap: toRem(7);
   margin-top: toRem(-7);
+  margin-bottom: toRem(-3);
   justify-items: start;
 
   p {
